# webserver_db

./: README.md  greetings.js  main.js
202108_Docker/: 202205_Kubernetes.xlsx  Docker_notes.xlsx  Kubernetes_cmd.txt  README.md  cmd_lists.txt
202108_Docker/demo-k8s-server/: Dockerfile  README.md  app.js  package-lock.json  package.json  tung-server-deployment.yaml  tung-server-loadBalancer.yaml  tung-server-nodePort.yaml  tung-server-pod.yaml
202108_JS/: JS_UnderstandWeirdParts.xlsx  JavaScript.xlsx  README.md
202108_NodeJS/: NodeJS.xlsx  NodeJS_UnitTest.xlsx  README.md
202108_NodeJS/03_docker/: Docker_PostgreSQL.xlsx  README.md  docker-compose.yml
202108_NodeJS/03_docker/db/: create_tables.sql
202108_NodeJS/03_docker/node-todos/: Dockerfile  app.js  package.json  queries.js
202108_NodeJS/03_docker/node-todos/config/: config.json  index.js
202108_NodeJS/03_docker/node-todos/views/: index.ejs
202108_NodeJS/db/posgres_ex/: app.js  package-lock.json  package.json  queries.js
202108_NodeJS/edumall/: app.js  hello.js  hello2.js
202108_NodeJS/edumall/blockapi/: api.js  app.js  package-lock.json  package.json
202108_NodeJS/edumall/demo/: api.js  logs.js  package.json
202108_NodeJS/edumall/emitter/: app.js  config.js
202108_NodeJS/edumall/emitter2/: app.js  app2.js
202108_NodeJS/edumall/express_ex/: app.js  package-lock.json  package.json
202108_NodeJS/edumall/express_ex/public/: style.css
202108_NodeJS/edumall/express_ex/views/: index.ejs  indexlogin.ejs  user.ejs  userquery.ejs
202108_NodeJS/edumall/file/: app.js  readme2copy.txt
202108_NodeJS/edumall/greet/: english.js  greetings.json  vietnamese.js
202108_NodeJS/edumall/http/: app.js  index.html  index2.html
202108_NodeJS/edumall/mocha_ex/: app.js  package.json
202108_NodeJS/edumall/mocha_ex/models/: pet.js
202108_NodeJS/edumall/mocha_ex/routes/: pet.js
202108_NodeJS/edumall/mocha_ex2/: package.json
202108_NodeJS/edumall/npm/: app.js  package-lock.json  package.json
202108_NodeJS/edumall/scheduler/: app.js  config.json  package.json  schedule.js
202108_NodeJS/edumall/setImmediate/: app.js
202109_VirtualBox/: Exp001_UbuntuFullDisk.txt
202111_AWS_CloudPractitioner/: AWS_CloudPractitioner.xlsx  AWS_EC2.xlsx  AWS_Lambda.xlsx
202112_AWS_AssociateDeveloper/: AWS_Quicksight.xlsx
202204_AWS_SolutionsArchitect/: AWS_SolutionsArchitect.xlsx
202206_Azure_AZ-204/: AZ-204.xlsx
202206_Azure_AZ-204/code-demo/az-arm-template-demo/: azdeploy.json  azdeploy.parameters.json
202206_Azure_AZ-204/code-demo/az-cosmosdb_ex/: databaseContext.js  index.js  package-lock.json  package.json
202206_Azure_AZ-204/code-demo/az-eventhub_ex/: README.md  package-lock.json  package.json  receiver.js  sender.js
202206_Azure_AZ-900/: AZ-900.xlsx
202208_Azure_AZ-104/: Az-104.xlsx  QA-AppService.txt  QA-AzureAD.txt  QA-Backup.txt  QA-Storage.txt  QA-VM.txt  QA-VNet.txt  cmd.txt
202304_Kafka/: 202304_Kafka.xlsx  Diagrams.html  basic-kafka-commands.txt
202304_Kafka/KafkaNode/: consumer.js  package-lock.json  package.json  producer.js
imp01_webServer/: FULL_iot_server.txt  README.md  topic01_nodejs  topic02_MongoDB.txt  topic03_HttpProtocol.txt  topic04_MqttProtocol.txt  topic05_html_ccs  topic06_SQLite  topic07_Connection.txt
imp01_webServer/code/: LedRoute.js  UserRoute.js  db.js  led.js  mqttclient.js  package.json  publisher.js  server.js
imp01_webServer/code/views/: sidebar.ejs
imp02_Colorbit/: README.md  notes-jsoncpp.txt  notes-openCV.txt
imp02_Colorbit/QHttp/: CMakeLists.txt  main.cpp  main_jpeg.cpp
imp02_Colorbit/QOpenCV/: CMakeLists.txt  HTTPRequest.hpp  main.cpp
imp02_Colorbit/WebServer/: BrDataRoute.js  BrJpegRoute.js  app.js
(+28 files in other folders)
